Changed to TypeScript and added `link` command

--- a/twitch/config.json
+++ b/twitch/config.json
@@ -1,5 +1,4 @@
 {
-   "clientID": "CLIENT ID",
-   "clientSecret": "CLIENT SECRET",
-   "channel": "TargetChannel"
+   "clientID": "3me3o7mbbrt3yrwmo0vccknsj6zynu",
+   "clientSecret": "utrjuc9wqxg1vjkfrbi5ontp3hsx08"
 }
