--- a/discord/config.json
+++ b/discord/config.json
@@ -1,5 +1,7 @@
 {
-    "token": "DISCORD TOKEN",
-    "channel": "TARGET CHANNEL ID",
-    "emojiGuild": "EMOJI GUILD ID"
-}   
+    "token": "NzIzNDkxNzgwNjgyODQyMTk0.G6qJod.5gxVZQDXZFZl7Bq6kDwnR_DKnwdS2sQLyj2I5o",
+    "channels": {
+      "jumboilive": "987236155651153930"
+    },
+    "emojiGuild": "915294315864002570"
+  }
