--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node dist/twitch/client.js",
+    "build": "tsc",
+    "dev": "ts-node twitch/client.ts"
   },
   "author": "DarkNet",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.8.0",
     "http-server": "^14.1.1",
+    "node-fetch": "^2.6.7",
     "node-twitch": "file:../node-twitch",
     "open": "^8.4.0",
     "request": "^2.88.2",
     "tmi.js": "^1.8.5",
     "twitch-api-v5": "^2.0.4"
+  },
+  "devDependencies": {
+    "@types/http-server": "^0.12.1",
+    "@types/node-fetch": "^3.0.3",
+    "@types/request": "^2.48.8",
+    "@types/tmi.js": "^1.8.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   }
 }
