--- a/discord/config.json
+++ b/discord/config.json
@@ -1,7 +1,7 @@
 {
-    "token": "NzIzNDkxNzgwNjgyODQyMTk0.G6qJod.5gxVZQDXZFZl7Bq6kDwnR_DKnwdS2sQLyj2I5o",
+    "token": "token",
     "channels": {
-      "jumboilive": "987236155651153930"
+      
     },
-    "emojiGuild": "915294315864002570"
+    "emojiGuild": ""
   }
