--- a/twitch/config.json
+++ b/twitch/config.json
@@ -1,4 +1,4 @@
 {
-   "clientID": "3me3o7mbbrt3yrwmo0vccknsj6zynu",
-   "clientSecret": "utrjuc9wqxg1vjkfrbi5ontp3hsx08"
+   "clientID": "",
+   "clientSecret": ""
 }
